--- a/src/scss/layout/_contactar.scss
+++ b/src/scss/layout/_contactar.scss
@@ -7,6 +7,7 @@
 }
 
 .imagen-contacto {
+    background-attachment: fixed;
     background-position: center center;
     background-size: cover;
     padding: $separacion*2 0;
